# ChangeLog for dev-lang/python
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.444 2010/01/12 13:52:52 arfrever Exp $

  12 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.4.6.ebuild, python-2.5.4-r3.ebuild, python-2.5.4-r4.ebuild,
  python-2.6.4.ebuild, python-3.1.1-r1.ebuild:
  Fix building with Portage <2.1.7 (bug #300671).

  01 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-3.1.1-r1.ebuild:
  Respect PYTHONDONTWRITEBYTECODE / sys.dont_write_bytecode in distutils.
  Check availability of nis headers before building of nis module (bug #288110).
  Use pkg-config found by AC_PATH_TOOL() to avoid problem during crosscompilation
  (bug #299044). Depend on >=app-admin/eselect-python-20091230, which allows
  wrapper scipts generated by python_generate_wrapper_scripts() and requiring
  Python-2-specific target scripts to work correctly, when Python 3 is set as
  main active version of Python.

*python-2.5.4-r4 (01 Jan 2010)

  01 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-2.5.4-r4.ebuild:
  Use external libffi (bug #209673). Respect PYTHONDONTWRITEBYTECODE in
  distutils. Check availability of nis headers before building of nis
  module (bug #288110).

  01 Jan 2010; Brent Baude <ranger@gentoo.org> python-2.6.4.ebuild:
  Marking python-2.6.4 ppc64 for bug 295066

  20 Dec 2009; Raúl Porcel <armin76@gentoo.org> python-2.6.4.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #295066

  19 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.6.4.ebuild:
  Restrict tests from test_httpservers (bug #293201).

  19 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-3.1.1-r1.ebuild:
  Use --with-computed-gotos (bug #296574).

  13 Dec 2009; Raúl Porcel <armin76@gentoo.org> python-2.6.4.ebuild,
  python-3.1.1-r1.ebuild: