@@ -12,12 +12,14 @@ DIST Python-3.1.1.tar.bz2 9757032 RMD160 d60b64e1346b2ff15d65b032ea35fb3ad8b0dc6
 DIST python-gentoo-patches-2.4.6.tar.bz2 10983 RMD160 c06dc76edec86d708a0c0e37126ae50f49f61bd3 SHA1 bbc04083fe74cff8c723c5c3cab70b1b814c987f SHA256 0508a66408f218c655823303833599344d2edeec1ffc683c6ada3fc33731590d
 DIST python-gentoo-patches-2.5.4-r2.tar.bz2 20722 RMD160 86c25ad3647b7a3ca44c8e781a4572187d6c1934 SHA1 a859d75092303ee445cebd7af4221beeed58b74d SHA256 54236f25147bb26e15f6f204975513515410292a343b6dfb2116806aa9123afc
 DIST python-gentoo-patches-2.5.4-r3.tar.bz2 19473 RMD160 c3a807693103f9e26c3cce4add5a1f3d975ef216 SHA1 c6170894865ee8aac8c813916c21a0d0458691bc SHA256 03f5bdb0a4ac8eb498a90c5cd444a5c76ed7e79bff5e8dca00efe77cf80c6391
+DIST python-gentoo-patches-2.6.4-r1.tar.bz2 12570 RMD160 2a58eb651ce5adc68c4667fb0ddc42cc215ea342 SHA1 c5de0442890bc0753c445a88390d932e629c8648 SHA256 2fe6c8838df2c07d3232ebb26c128dab2787c43a76ddb0b55acec1bed657f9f2
 DIST python-gentoo-patches-2.6.4.tar.bz2 11032 RMD160 83903892ef18880f876e7a140c803c1e8a67e24b SHA1 51d4174b2a4136a11c64ae0007b59e4c2f0e13f2 SHA256 19a66a0855df270c030438f21c29260e7ff69b299830409f6aa9140611b721e2
 DIST python-gentoo-patches-3.1.1-r4.tar.bz2 10200 RMD160 418852c54bf7169eb7bab078e78997e22799139e SHA1 0c063cd446a22833e267710f59351cb157098b21 SHA256 c065659242df3e921290ff044aee6f543c8b5cd2290db5bf668065cf97fcbbbe
 EBUILD python-2.4.6.ebuild 9054 RMD160 8c9fb25807cad20caf4eee003b9b0a3d337d0bfe SHA1 2968106956c446e8f84f167ffaa77b5e54ae39ae SHA256 b10a0b9afc93da84cccd89cec36458139e979eca69a06824d9e9d11c82401ff5
 EBUILD python-2.5.4-r3.ebuild 9478 RMD160 9bed8820cf675f418948b0094d2664f955b10c5a SHA1 5499233000f9befb7a1b0ca239348b3b3a0da76c SHA256 511e136bf9534f1f7e24d3eb7e2c2dced82baf00954589a840c11351e2971fb3
 EBUILD python-2.5.4-r4.ebuild 9426 RMD160 160bece9cb62677cadf0f9430c065ad0c8f27b02 SHA1 b704035f156b103f22f661e7fab3c08a6015bace SHA256 9756ff0e1faa3b5a50d64ed1d781f029610bd291a861e77ebc730b641ac1a440
+EBUILD python-2.6.4-r1.ebuild 9680 RMD160 b999332e7d2be94143cd8871d3bd1a754c46f4cc SHA1 dab8964d4c944be05841ecba7ae882e7e068c0fe SHA256 4af4fcd28bda413d605762b2106815349c82ccd71ad8369c5a5a6b4d5c0bd20c
 EBUILD python-2.6.4.ebuild 9666 RMD160 2183ed5be168b63df86b6b7ee2c2b218e2dd86c5 SHA1 565207199763748fa78655658279d5ea18ec63a4 SHA256 c948a73efffc29ee4a23b7f55cf68b40cf6a850359119b6260ae2674094a27fd
 EBUILD python-3.1.1-r1.ebuild 9023 RMD160 0f48986000fc8644d91524a60e24d3656b59770b SHA1 27658951380b3f1208b7b895b071eb3e6c7bde21 SHA256 3dd59dec5116dc4d7bb13ed1eb9fad64a9af8f3d23298bc9bf8009ee5ac0180c
-MISC ChangeLog 77987 RMD160 254ed8f6fad8d2dc5c81f7f7528a4a83ed86eb71 SHA1 dbe91a8cf5a9cb6fc52ad39ad88789655dca6406 SHA256 2e984a747704c9560d927ebab46c8967e5c68dd228df1704e0e6f4ccbaaad0ee
+MISC ChangeLog 78413 RMD160 98a40d1ad311a7d04d2d5815cc4ea4fc13e535b8 SHA1 01b4dd5968a25c2721a5e7bcfd564ff5bf236cbb SHA256 1cca07a2bcc3093bd93276044da9155276c37969861dc221f22a1c49a85c3d3e
 MISC metadata.xml 661 RMD160 54831d16b8807086bfabdbb3df9d33336b5d42a0 SHA1 9867c337fe9e6f4e967004fc9409763e0fedf43b SHA256 2c6c3407251f7ccd6501dee49494e539a9544f2fbae99a4373eefdf4e83e8908
